[package]
name = "ece508"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.71.0"
cc = "1.0"
cxx = "1.0"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
rand = { version = "0.9.2", features = ["thread_rng"] }

[dependencies.pyo3]
version = "0.27.1"
features = ["auto-initialize"]
